# CppChannels

./: CMakeLists.txt  cmake-pm
docs/: mainpage.md
include/channel/: channel.hpp
test/: channelTest.cpp
